Bugfix: Author name alignment

--- a/assets/sass/3-blocks/_query.scss
+++ b/assets/sass/3-blocks/_query.scss
@@ -113,7 +113,7 @@
 		.wp-block-post-date,
 		.wp-block-post-author__name,
 		.wp-block-post-author__content {
-			display: inline-block;
+			display: inline;
 		}
 
 		.wp-block-post-author {
